--- a/AcmeSchool/src/index.css
+++ b/AcmeSchool/src/index.css
@@ -11,7 +11,8 @@ body {
     padding: 20px;
 }
 
-.container {
+.container { 
+    padding-top: 80px;
     max-width: 1400px;
     margin: 0 auto;
 }
@@ -20,10 +21,13 @@ body {
     background-color: #f1f1f5;
     border-bottom: 1px solid #ccc;
     padding: 20px 0;
+    width: 100%;
+    position: fixed;
+    margin-top: -30px;
+    margin-left: -20px;
 }
 
 .header-container {
-    max-width: 1400px;
     margin: 0 auto;
     padding: 0 30px;
     display: flex;
